--- a/metacentrum/LoadHonzaData.ipynb
+++ b/metacentrum/LoadHonzaData.ipynb
@@ -5,34 +5,56 @@
    "execution_count": 1,
    "id": "5d212fbb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using cpu\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np\n",
-    "import scipy\n",
-    "import pandas as pd\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
+    "# io\n",
     "import os, sys\n",
-    "\n",
     "import itertools, functools\n",
     "\n",
     "from natsort import natsorted\n",
     "\n",
-    "\n",
     "import csv\n",
     "\n",
     "sys.path.append('convert_full_data')\n",
+    "sys.path.append('../regression-prior-networks')\n",
     "\n",
-    "import tss\n",
-    "\n",
-    "from parallization_metacentrum import ArrayIsMetacentrum, IsMetacentrum\n",
+    "# science utils\n",
+    "import numpy as np\n",
+    "import scipy\n",
+    "import pandas as pd\n",
     "\n",
     "import sklearn\n",
     "import sklearn.model_selection\n",
     "\n",
-    "import torch"
+    "# plot\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "#####################\n",
+    "# custom\n",
+    "import tss\n",
+    "from parallization_metacentrum import ArrayIsMetacentrum, IsMetacentrum\n",
+    "\n",
+    "#####################\n",
+    "# pytorch & settings\n",
+    "os.environ['CUDA_VISIBLE_DEVICES'] = \"\"\n",
+    "import torch\n",
+    "\n",
+    "torch.set_num_threads(1)\n",
+    "torch.set_num_interop_threads(1)\n",
+    "\n",
+    "if torch.cuda.is_available():\n",
+    "    print(\"Using cuda\")\n",
+    "else:\n",
+    "    print(\"Using cpu\")"
    ]
   },
   {
@@ -227,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "ee131763",
    "metadata": {},
    "outputs": [],
@@ -240,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "51bb6dc4",
    "metadata": {},
    "outputs": [],
@@ -316,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "13d1ff18",
    "metadata": {},
    "outputs": [],
@@ -356,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "b03d2df0",
    "metadata": {},
    "outputs": [
@@ -368,35 +390,35 @@
       "torch.Size([5])\n",
       "torch.Size([2, 2])\n",
       "torch.Size([2])\n",
-      "[tensor([[ 2.4467,  3.3691],\n",
-      "        [ 2.4219, -3.4063],\n",
-      "        [ 4.1540, -2.6965],\n",
+      "[tensor([[ 1.1398, -5.0000],\n",
+      "        [ 0.7412, -0.9025],\n",
       "        [-1.8079, -3.2079],\n",
-      "        [ 2.3282, -2.0042]]), tensor([272.9194, 221.0556, 223.1950, 244.0245, 224.3768])]\n",
+      "        [ 2.4219, -3.4063],\n",
+      "        [ 4.1540, -2.6965]]), tensor([225.3054, 234.2938, 244.0245, 221.0556, 223.1950])]\n",
       "Starting training for 600 steps\n",
       "[tensor([[-1.8079, -3.2079],\n",
-      "        [ 2.3282, -2.0042],\n",
-      "        [ 2.4219, -3.4063],\n",
       "        [ 4.1540, -2.6965],\n",
-      "        [ 2.4467,  3.3691]]), tensor([244.0245, 224.3768, 221.0556, 223.1950, 272.9194])]\n",
+      "        [ 1.1398, -5.0000],\n",
+      "        [ 2.4219, -3.4063],\n",
+      "        [ 0.7412, -0.9025]]), tensor([244.0245, 223.1950, 225.3054, 221.0556, 234.2938])]\n",
+      "Starting training for 600 steps\n",
+      "[tensor([[ 2.4219, -3.4063],\n",
+      "        [-1.8079, -3.2079],\n",
+      "        [ 4.1540, -2.6965],\n",
+      "        [ 0.7412, -0.9025],\n",
+      "        [ 1.1398, -5.0000]]), tensor([221.0556, 244.0245, 223.1950, 234.2938, 225.3054])]\n",
       "Starting training for 600 steps\n",
       "[tensor([[-1.8079, -3.2079],\n",
-      "        [ 2.3282, -2.0042],\n",
-      "        [ 2.4467,  3.3691],\n",
-      "        [ 4.1540, -2.6965],\n",
-      "        [ 2.4219, -3.4063]]), tensor([244.0245, 224.3768, 272.9194, 223.1950, 221.0556])]\n",
-      "Starting training for 600 steps\n",
-      "[tensor([[ 4.1540, -2.6965],\n",
-      "        [ 2.3282, -2.0042],\n",
-      "        [ 2.4467,  3.3691],\n",
-      "        [-1.8079, -3.2079],\n",
-      "        [ 2.4219, -3.4063]]), tensor([223.1950, 224.3768, 272.9194, 244.0245, 221.0556])]\n",
-      "Starting training for 600 steps\n",
-      "[tensor([[ 2.3282, -2.0042],\n",
+      "        [ 1.1398, -5.0000],\n",
       "        [ 2.4219, -3.4063],\n",
-      "        [ 4.1540, -2.6965],\n",
-      "        [ 2.4467,  3.3691],\n",
-      "        [-1.8079, -3.2079]]), tensor([224.3768, 221.0556, 223.1950, 272.9194, 244.0245])]\n",
+      "        [ 0.7412, -0.9025],\n",
+      "        [ 4.1540, -2.6965]]), tensor([244.0245, 225.3054, 221.0556, 234.2938, 223.1950])]\n",
+      "Starting training for 600 steps\n",
+      "[tensor([[ 2.4219, -3.4063],\n",
+      "        [ 1.1398, -5.0000],\n",
+      "        [-1.8079, -3.2079],\n",
+      "        [ 0.7412, -0.9025],\n",
+      "        [ 4.1540, -2.6965]]), tensor([221.0556, 225.3054, 244.0245, 234.2938, 223.1950])]\n",
       "Starting training for 600 steps\n"
      ]
     },
@@ -407,9 +429,9 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [12]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mprocess_dataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrun_files\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Input \u001b[0;32mIn [11]\u001b[0m, in \u001b[0;36mprocess_dataset\u001b[0;34m(name)\u001b[0m\n\u001b[1;32m     23\u001b[0m writer \u001b[38;5;241m=\u001b[39m csv\u001b[38;5;241m.\u001b[39mwriter(f)\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m ig, generation \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(record\u001b[38;5;241m.\u001b[39mall_gens):\n\u001b[0;32m---> 26\u001b[0m     output \u001b[38;5;241m=\u001b[39m \u001b[43mtrain_all_models_on_specific_state\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgeneration\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     27\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m output\n\u001b[1;32m     28\u001b[0m     fields \u001b[38;5;241m=\u001b[39m [name, ig, \u001b[38;5;241m*\u001b[39moutput]\n",
-      "Input \u001b[0;32mIn [10]\u001b[0m, in \u001b[0;36mtrain_all_models_on_specific_state\u001b[0;34m(state)\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[38;5;66;03m# ---------------------\u001b[39;00m\n\u001b[1;32m     42\u001b[0m \n\u001b[1;32m     43\u001b[0m \u001b[38;5;66;03m# 1. use only one model\u001b[39;00m\n\u001b[1;32m     44\u001b[0m model \u001b[38;5;241m=\u001b[39m ensemble[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     45\u001b[0m training_output\u001b[38;5;241m.\u001b[39mupdate(\n\u001b[0;32m---> 46\u001b[0m     \u001b[43mextend_info\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mbasic\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mget_information_basic_model\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mx_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_test\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     47\u001b[0m )\n\u001b[1;32m     49\u001b[0m \u001b[38;5;66;03m# 2. use ensemble\u001b[39;00m\n\u001b[1;32m     50\u001b[0m model \u001b[38;5;241m=\u001b[39m train_ensemble(ensemble)\n",
+      "Input \u001b[0;32mIn [8]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mprocess_dataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrun_files\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[0;32mIn [7]\u001b[0m, in \u001b[0;36mprocess_dataset\u001b[0;34m(name)\u001b[0m\n\u001b[1;32m     23\u001b[0m writer \u001b[38;5;241m=\u001b[39m csv\u001b[38;5;241m.\u001b[39mwriter(f)\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m ig, generation \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(record\u001b[38;5;241m.\u001b[39mall_gens):\n\u001b[0;32m---> 26\u001b[0m     output \u001b[38;5;241m=\u001b[39m \u001b[43mtrain_all_models_on_specific_state\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgeneration\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     27\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m output\n\u001b[1;32m     28\u001b[0m     fields \u001b[38;5;241m=\u001b[39m [name, ig, \u001b[38;5;241m*\u001b[39moutput]\n",
+      "Input \u001b[0;32mIn [6]\u001b[0m, in \u001b[0;36mtrain_all_models_on_specific_state\u001b[0;34m(state)\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[38;5;66;03m# ---------------------\u001b[39;00m\n\u001b[1;32m     42\u001b[0m \n\u001b[1;32m     43\u001b[0m \u001b[38;5;66;03m# 1. use only one model\u001b[39;00m\n\u001b[1;32m     44\u001b[0m model \u001b[38;5;241m=\u001b[39m ensemble[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     45\u001b[0m training_output\u001b[38;5;241m.\u001b[39mupdate(\n\u001b[0;32m---> 46\u001b[0m     \u001b[43mextend_info\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mbasic\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mget_information_basic_model\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mx_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_test\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     47\u001b[0m )\n\u001b[1;32m     49\u001b[0m \u001b[38;5;66;03m# 2. use ensemble\u001b[39;00m\n\u001b[1;32m     50\u001b[0m model \u001b[38;5;241m=\u001b[39m train_ensemble(ensemble)\n",
       "File \u001b[0;32m~/bin/python_env/lib/python3.10/site-packages/torch/autograd/grad_mode.py:27\u001b[0m, in \u001b[0;36m_DecoratorContextManager.__call__.<locals>.decorate_context\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;129m@functools\u001b[39m\u001b[38;5;241m.\u001b[39mwraps(func)\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdecorate_context\u001b[39m(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m     26\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mclone():\n\u001b[0;32m---> 27\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
       "\u001b[0;31mTypeError\u001b[0m: extend_info() missing 1 required positional argument: 'y_test'"
      ]
