--- a/metacentrum/UkazkaPraceSIteratorem.ipynb
+++ b/metacentrum/UkazkaPraceSIteratorem.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7204ebe8",
+   "id": "42826af5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9396268c",
+   "id": "1ecc2c18",
    "metadata": {},
    "source": [
     "# Normal Jobs\n",
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "31cf209c",
+   "id": "216d562c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c1c8d3b7",
+   "id": "4862ad44",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f95e0eed",
+   "id": "8c73760d",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "83e2ac03",
+   "id": "c6f3afb7",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "537ea16e",
+   "id": "d7f4b533",
    "metadata": {},
    "outputs": [
     {
@@ -117,14 +117,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "aa5af975",
+   "id": "461574c8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<generator object IsMetacentrum.run_imap at 0x7f7eaeaa33e0>\n"
+      "<generator object IsMetacentrum.run_imap at 0x7fa196cf73e0>\n"
      ]
     }
    ],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13ada78b",
+   "id": "7b49785f",
    "metadata": {},
    "source": [
     "# Array jobs \n",
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "205f57f1",
+   "id": "d904c1ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,13 +173,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e1d9e429",
+   "id": "e519695d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 4, 7, 10, 13, 16, 19, 22, 25, 28, 31, 34, 37]"
+       "<itertools.islice at 0x7fa1968fee80>"
       ]
      },
      "execution_count": 9,
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2948f4f9",
+   "id": "6bac3915",
    "metadata": {},
    "outputs": [
     {
@@ -217,14 +217,14 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "956d2ffb",
+   "id": "3cc32012",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<generator object IsMetacentrum.run_imap at 0x7f7eaeaa3760>\n",
+      "<generator object ArrayMetacentrum.split_work_and_run_imap at 0x7fa196cf76f0>\n",
       "----------------------------------------\n",
       "2, 8, 14, 20, 26, 32, 38, 44, 50, 56, 62, 68, 74, \n"
      ]
@@ -243,16 +243,16 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e9ab636b",
+   "id": "f6f05ea4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<generator object IsMetacentrum.run_imap_unordered at 0x7f7eaeaa3840>\n",
+      "<generator object ArrayMetacentrum.split_work_and_run_imap_unordered at 0x7fa196cf7840>\n",
       "----------------------------------------\n",
-      "2, 8, 26, 20, 14, 32, 44, 50, 38, 56, 74, 62, 68, \n"
+      "2, 8, 14, 20, 26, 44, 32, 38, 56, 50, 62, 68, 74, \n"
      ]
     }
    ],
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2439b9d0",
+   "id": "42cdb9f6",
    "metadata": {},
    "source": [
     "## Slice types"
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "87499214",
+   "id": "19070635",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,16 +299,16 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "60b35421",
+   "id": "45bfed86",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39]\n",
-      "[1, 4, 7, 10, 13, 16, 19, 22, 25, 28, 31, 34, 37]\n",
-      "[2, 5, 8, 11, 14, 17, 20, 23, 26, 29, 32, 35, 38]\n"
+      "<itertools.islice object at 0x7fa1e4315170>\n",
+      "<itertools.islice object at 0x7fa1e4315170>\n",
+      "<itertools.islice object at 0x7fa1e4315170>\n"
      ]
     }
    ],
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "619354ff",
+   "id": "1519990e",
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "377c5a13",
+   "id": "de6659ba",
    "metadata": {},
    "outputs": [
     {
@@ -376,8 +376,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "72f56730",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[15, 3, 6, 25, 24, 30, 28, 31, 7, 16, 4, 36, 8]\n",
+      "[27, 22, 10, 33, 18, 35, 39, 14, 26, 19, 13, 12, 0]\n",
+      "[23, 2, 11, 1, 37, 32, 5, 9, 17, 29, 34, 20, 38, 21]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# random shuffle + split\n",
+    "array = HackArray0(slice_type='random', seed=1)\n",
+    "print(array.split_work(allinp))\n",
+    "array = HackArray1(slice_type='random', seed=1)\n",
+    "print(array.split_work(allinp))\n",
+    "array = HackArray2(slice_type='random', seed=1)\n",
+    "print(array.split_work(allinp))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "bf437675",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[32, 37, 21, 18, 2, 13, 16, 19, 10, 23, 38, 5, 3]\n",
+      "[7, 22, 0, 1, 8, 24, 14, 17, 11, 33, 36, 12, 20]\n",
+      "[26, 4, 39, 27, 34, 15, 29, 9, 35, 31, 30, 25, 6, 28]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# random shuffle + split\n",
+    "array = HackArray0(slice_type='random', seed=2)\n",
+    "print(array.split_work(allinp))\n",
+    "array = HackArray1(slice_type='random', seed=2)\n",
+    "print(array.split_work(allinp))\n",
+    "array = HackArray2(slice_type='random', seed=2)\n",
+    "print(array.split_work(allinp))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6bbc0f68",
+   "id": "aabd8272",
    "metadata": {},
    "outputs": [],
    "source": []
