--- a/metacentrum/UkazkaPraceSIteratorem.ipynb
+++ b/metacentrum/UkazkaPraceSIteratorem.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "42826af5",
+   "id": "7e95bf81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ecc2c18",
+   "id": "20decaf4",
    "metadata": {},
    "source": [
     "# Normal Jobs\n",
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "216d562c",
+   "id": "0357e163",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4862ad44",
+   "id": "4abb3b64",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8c73760d",
+   "id": "e7658975",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c6f3afb7",
+   "id": "461a2e99",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d7f4b533",
+   "id": "19d62434",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "461574c8",
+   "id": "dcae1abc",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b49785f",
+   "id": "1d56d887",
    "metadata": {},
    "source": [
     "# Array jobs \n",
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d904c1ad",
+   "id": "a9eb2618",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e519695d",
+   "id": "3c4b957b",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6bac3915",
+   "id": "f86eb087",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3cc32012",
+   "id": "2b8542ca",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f6f05ea4",
+   "id": "53507788",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42cdb9f6",
+   "id": "8dc4b563",
    "metadata": {},
    "source": [
     "## Slice types"
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "19070635",
+   "id": "3ae80718",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,17 +298,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "45bfed86",
+   "execution_count": 19,
+   "id": "21c81271",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<itertools.islice object at 0x7fa1e4315170>\n",
-      "<itertools.islice object at 0x7fa1e4315170>\n",
-      "<itertools.islice object at 0x7fa1e4315170>\n"
+      "<itertools.islice object at 0x7fa1968ff740>\n",
+      "<itertools.islice object at 0x7fa1ee017bf0>\n",
+      "<itertools.islice object at 0x7fa1968ff740>\n"
      ]
     }
    ],
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "1519990e",
+   "id": "6ce46784",
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "de6659ba",
+   "id": "13b99771",
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "72f56730",
+   "id": "bfec2a34",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "bf437675",
+   "id": "598d471f",
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aabd8272",
+   "id": "158b2ddd",
    "metadata": {},
    "outputs": [],
    "source": []
